# backend-auth

./: .env  .env.solo  .secrets.example  Dockerfile  Makefile  docker-compose.devintegrated.yml  docker-compose.devsolo.yml  docker-compose.integrated.yml  docker-compose.prod.yml  docker-compose.solodev.yml  docker-compose.yml  gunicorn_conf.py  pyproject.toml  release-notes.txt  start-dev.sh  tests-start.sh
.github/workflows/: build-and-publish-docker.yml
app/: authentication.py  config.py  crud.py  deps.py  main.py  model.py  pre_start.py
app/api/api_v1/: auth.py  users.py
app/utils/: getAudience.py
